# Improve-ImgSLI

./: .gitignore  1.sh  AGENTS.md  CONTRIBUTING.md  HISTORY.md  Improve ImgSLI.desktop  Improve ImgSLI.py  Improve_ImgSLI.py  README.ru.md  THIRD_PARTY_LICENSES.md  VISION.md  app_context.txt  clickable_label.py  code.txt  context_cloc_fixed.sh  debug.txt~  image_comparison_app.py  image_processing.py  improve-imgsli.desktop  improve-imgsli.desktop.in  launcher.sh  llms.txt  readme.md  requirements-dev.txt  requirements-gui.txt  requirements.txt  shell.nix  translations.py
cpp/: .gitignore  CMakeLists.txt  Cargo.toml  README.md
cpp/app/: CMakeLists.txt  canvas_features.cpp  canvas_widget.cpp  canvas_widget.h  feature_passes.cpp  feature_passes.h  feature_registry.cpp  feature_registry.h  i18n_helper.h  main.cpp  plugin_comparison.cpp  plugin_export.cpp  plugin_registry.cpp  plugin_registry.h  plugin_settings.cpp  plugin_video_editor.cpp  render_pass.h  render_pass_registry.cpp  render_pass_registry.h  settings_application_service.cpp  settings_application_service.h  settings_dialog.cpp  settings_dialog.h  store.cpp  store.h  tab_registry.cpp  tab_registry.h  tabs_export.cpp  tabs_multi_compare.cpp  tabs_video_editor.cpp
cpp/app/cli/: analysis_snapshot_command.cpp  analysis_snapshot_command.h  benchmark_command.cpp  benchmark_command.h  comparison_command.cpp  comparison_command.h  contract_check_command.cpp  contract_check_command.h  session_blueprint_command.cpp  session_blueprint_command.h  snapshot_command.cpp  snapshot_command.h  startup_options.cpp  startup_options.h  video_transcode_command.cpp  video_transcode_command.h
cpp/app/core/: feature_registry.cpp  plugin_registry.cpp  render_pass_registry.cpp  render_pass_registry.h  store.cpp  store.h  tab_registry.cpp
cpp/app/domain/: qt_adapters.h  types.h  workspace.h
cpp/app/plugins/analysis/: controller.cpp  controller.h  plugin.cpp
cpp/app/plugins/comparison/: controller.cpp  controller.h  plugin.cpp
cpp/app/plugins/export/: plugin.cpp
cpp/app/plugins/help/: dialog.cpp  dialog.h  plugin.cpp
cpp/app/plugins/layout/: plugin.cpp
cpp/app/plugins/settings/: application_service.cpp  dialog.cpp  dialog.h  plugin.cpp
cpp/app/plugins/video_editor/: controller.cpp  controller.h  plugin.cpp
cpp/app/services/io/: image_loader.cpp  image_loader.h
cpp/app/services/system/: clipboard.cpp  clipboard.h  notifications.cpp  notifications.h
cpp/app/shaders/: canvas.frag  feature.frag  overlay.frag  overlay.vert
cpp/app/shared/image_processing/: analysis_pair.cpp  analysis_pair.h  prescale.cpp  prescale.h  qt_conversion.cpp  qt_conversion.h  regions.cpp  regions.h  resize.cpp  resize.h
cpp/app/shared/rendering/: interpolation.cpp  interpolation.h  live_snapshot.cpp  live_snapshot.h  plan_builder.cpp  plan_builder.h  target_surface.h
cpp/app/shell/: bootstrap.cpp  bootstrap.h  custom_window.cpp  custom_window.h  layouts.cpp  layouts.h  main.cpp  ui.cpp  ui.h
cpp/app/tabs/export/: tab.cpp
cpp/app/tabs/multi_compare/: grid.cpp  grid.h  tab.cpp
cpp/app/tabs/video_editor/: tab.cpp
cpp/app/ui/: gesture_resolver.cpp  gesture_resolver.h  icon_manager.cpp  icon_manager.h
cpp/app/ui/canvas/: canvas_widget.cpp  canvas_widget.h  vulkan_smoke.h
cpp/app/ui/canvas_features/: registry.cpp  registry.h
cpp/app/ui/managers/: message_manager.cpp  message_manager.h  tray_manager.cpp  tray_manager.h
cpp/app/ui/widgets/: form_controls.cpp  form_controls.h  rounded_overlay.cpp  rounded_overlay.h  startup_placeholder.cpp  startup_placeholder.h  zoom_indicator.cpp  zoom_indicator.h
cpp/app/utils/: geometry.cpp  geometry.h  resource_loader.cpp  resource_loader.h
cpp/core/: Cargo.toml  build.rs
cpp/core/src/: action.rs  bridge.rs  domain.rs  i18n.rs  image_cache.rs  lib.rs  plan.rs  plan_keys.rs  reducer.rs  settings.rs  settings_dialog.rs  stacking.rs  state.rs  store.rs  video_editor.rs
cpp/core/src/core/: action.rs  mod.rs  reducer.rs  state.rs  store.rs
cpp/core/src/plugins/: mod.rs
cpp/core/src/shared/: mod.rs
cpp/core/src/tabs/: mod.rs
cpp/core/src/ui/: mod.rs
cpp/core/src/workspace/: mod.rs  session_blueprint.rs
cpp/core_py/: Cargo.toml  pyproject.toml
cpp/core_py/src/: lib.rs
cpp/include/imgsli/: store_observer.h
cpp/include/imgsli/contracts/: README.md  canvas_widget_feature.h  plugin_contract.h  tab_contract.h
cpp/toolkit/: CMakeLists.txt
cpp/toolkit/src/: button.cpp  check_box.cpp  combo_box.cpp  group_box.cpp  radio_button.cpp  spin_box.cpp  style_bridge.cpp  theme.cpp
cpp/toolkit/src/atomic/: check_box.cpp  custom_group_widget.cpp  custom_line_edit.cpp  divider.cpp  drop_zone_label.cpp  group_box.cpp  icon.cpp  instances_counter_button.cpp  loading_spinner.cpp  minimalist_scrollbar.cpp  radio_button.cpp  section_header.cpp  slider.cpp  spin_box.cpp  switch.cpp  text_labels.cpp  time_line_edit.cpp  tooltip.cpp
cpp/toolkit/src/buttons/: button.cpp  button_group.cpp  chip_group.cpp  controller.cpp  dropdown_menu.cpp  painter.cpp  regions.cpp  specs.cpp  variants.cpp
cpp/toolkit/src/comboboxes/: combo_box.cpp  dropdown_overlay.cpp  models.cpp  overlay.cpp  scrollable_combo_box.cpp  search.cpp
cpp/toolkit/src/composite/: adaptive_tab_strip.cpp  base_flyout.cpp  color_swatch.cpp  dialog_shell.cpp  drag_ghost_widget.cpp  flyout.cpp  help_sections.cpp  icon_action_flyout.cpp  indexed_toggle_flyout.cpp  log_console_widget.cpp  markdown_help_dialog.cpp  preview_panel.cpp  process_console_widget.cpp  sidebar_nav_list.cpp  simple_options_flyout.cpp  toast.cpp  toolbar.cpp
cpp/toolkit/src/helpers/: editable_text.cpp  hover_coordinator.cpp  icon_pixmap.cpp  overlay_geometry.cpp  shadow_painter.cpp  underline_painter.cpp  wheel_scroll_policy.cpp
cpp/toolkit/src/list_items/: editable_list_item.cpp  rating_item.cpp
cpp/toolkit/tests/: CMakeLists.txt  parity_renderer.cpp  test_button_config_ctor.cpp  test_button_custom_bg.cpp  test_button_regions.cpp  test_button_toggle.cpp  test_button_underline.cpp  test_contrast.cpp  test_keyboard.cpp  test_theme.cpp  test_widgets_smoke.cpp
(+2308 files in other folders)
