[package]
name = "imgsli_core"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = "1.0"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serde_bytes = "0.11"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
cxx-build = "1.0"
