[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "imgsli-core-py"
version = "0.0.1"
description = "PyO3 bindings for the Rust core of ImgSLI (Phase 1 parallel-validation shim)."
requires-python = ">=3.10"
classifiers = ["Programming Language :: Rust", "Private :: Do Not Upload"]

[tool.maturin]
module-name = "imgsli_core_py"
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
