add_library(sli_ui_toolkit_cpp STATIC
    include/sli/toolkit/theme.h
    include/sli/toolkit/list_items/editable_list_item.h
    include/sli/toolkit/list_items/rating_item.h
    include/sli/toolkit/overlays/in_window_overlay.h
    include/sli/toolkit/overlays/choice_overlay.h
    include/sli/toolkit/overlays/drag_drop_overlay.h
    include/sli/toolkit/atomic/check_box.h
    include/sli/toolkit/atomic/divider.h
    include/sli/toolkit/atomic/group_box.h
    include/sli/toolkit/atomic/icon.h
    include/sli/toolkit/atomic/radio_button.h
    include/sli/toolkit/atomic/section_header.h
    include/sli/toolkit/atomic/spin_box.h
    include/sli/toolkit/atomic/loading_spinner.h
    include/sli/toolkit/atomic/switch.h
    include/sli/toolkit/atomic/slider.h
    include/sli/toolkit/atomic/text_labels.h
    include/sli/toolkit/atomic/custom_line_edit.h
    include/sli/toolkit/atomic/drop_zone_label.h
    include/sli/toolkit/atomic/tooltip.h
    include/sli/toolkit/atomic/time_line_edit.h
    include/sli/toolkit/atomic/custom_group_widget.h
    include/sli/toolkit/atomic/instances_counter_button.h
    include/sli/toolkit/atomic/minimalist_scrollbar.h
    include/sli/toolkit/helpers/shadow_painter.h
    include/sli/toolkit/style_bridge.h
    include/sli/toolkit/helpers/overlay_geometry.h
    include/sli/toolkit/helpers/editable_text.h
    include/sli/toolkit/helpers/wheel_scroll_policy.h
    include/sli/toolkit/helpers/underline_painter.h
    include/sli/toolkit/helpers/icon_pixmap.h
    include/sli/toolkit/helpers/hover_coordinator.h
    include/sli/toolkit/buttons/button.h
    include/sli/toolkit/buttons/chip_group.h
    include/sli/toolkit/buttons/state.h
    include/sli/toolkit/buttons/variant_spec.h
    include/sli/toolkit/buttons/regions.h
    include/sli/toolkit/buttons/specs.h
    include/sli/toolkit/buttons/draw_context.h
    include/sli/toolkit/buttons/content/button_row.h
    include/sli/toolkit/buttons/content/content.h
    include/sli/toolkit/buttons/controller.h
    include/sli/toolkit/buttons/painter.h
    include/sli/toolkit/buttons/layers/layer.h
    include/sli/toolkit/buttons/layers/ripple.h
    include/sli/toolkit/buttons/layers/background_layer.h
    include/sli/toolkit/buttons/layers/content_layer.h
    include/sli/toolkit/buttons/layers/badge_layer.h
    include/sli/toolkit/buttons/layers/underline_layer.h
    include/sli/toolkit/buttons/layers/strikethrough_layer.h
    include/sli/toolkit/buttons/layers/divider_layer.h
    include/sli/toolkit/buttons/layers/ripple_layer.h
    include/sli/toolkit/buttons/dropdown_menu.h
    include/sli/toolkit/buttons/capabilities/capability.h
    include/sli/toolkit/buttons/capabilities/long_press_capability.h
    include/sli/toolkit/buttons/capabilities/menu_capability.h
    include/sli/toolkit/buttons/capabilities/scroll_capability.h
    include/sli/toolkit/buttons/variants.h
    include/sli/toolkit/buttons/button_group.h
    include/sli/toolkit/comboboxes/combo_box.h
    include/sli/toolkit/comboboxes/models.h
    include/sli/toolkit/comboboxes/search.h
    include/sli/toolkit/comboboxes/overlay.h
    include/sli/toolkit/comboboxes/dropdown_overlay.h
    include/sli/toolkit/comboboxes/scrollable_combo_box.h
    include/sli/toolkit/composite/base_flyout.h
    include/sli/toolkit/composite/color_swatch.h
    include/sli/toolkit/composite/dialog_shell.h
    include/sli/toolkit/composite/drag_ghost_widget.h
    include/sli/toolkit/composite/flyout.h
    include/sli/toolkit/composite/help_sections.h
    include/sli/toolkit/composite/log_console_widget.h
    include/sli/toolkit/composite/preview_panel.h
    include/sli/toolkit/composite/process_console_widget.h
    include/sli/toolkit/composite/sidebar_nav_list.h
    include/sli/toolkit/composite/markdown_help_dialog.h
    include/sli/toolkit/composite/adaptive_tab_strip.h
    include/sli/toolkit/composite/toolbar.h
    include/sli/toolkit/composite/toast.h
    include/sli/toolkit/composite/icon_action_flyout.h
    include/sli/toolkit/composite/simple_options_flyout.h
    include/sli/toolkit/composite/unified_flyout/common.h
    include/sli/toolkit/composite/unified_flyout/model.h
    include/sli/toolkit/composite/unified_flyout/style.h
    include/sli/toolkit/composite/unified_flyout/layout.h
    include/sli/toolkit/composite/unified_flyout/delegate.h
    include/sli/toolkit/composite/unified_flyout/overlay_list_view.h
    include/sli/toolkit/composite/unified_flyout/minimalist_scrollbar.h
    include/sli/toolkit/composite/unified_flyout/panel.h
    include/sli/toolkit/composite/unified_flyout/session.h
    include/sli/toolkit/composite/unified_flyout/refresh.h
    include/sli/toolkit/composite/unified_flyout/dragdrop.h
    include/sli/toolkit/composite/unified_flyout/content.h
    include/sli/toolkit/composite/unified_flyout/simple_adapter.h
    include/sli/toolkit/composite/unified_flyout/bootstrap.h
    src/theme.cpp
    src/list_items/editable_list_item.cpp
    src/list_items/rating_item.cpp
    src/overlays/in_window_overlay.cpp
    src/overlays/choice_overlay.cpp
    src/overlays/drag_drop_overlay.cpp
    src/atomic/check_box.cpp
    src/atomic/divider.cpp
    src/atomic/group_box.cpp
    src/atomic/icon.cpp
    src/atomic/radio_button.cpp
    src/atomic/section_header.cpp
    src/atomic/spin_box.cpp
    src/atomic/loading_spinner.cpp
    src/atomic/switch.cpp
    src/atomic/slider.cpp
    src/atomic/text_labels.cpp
    src/atomic/custom_line_edit.cpp
    src/atomic/drop_zone_label.cpp
    src/atomic/tooltip.cpp
    src/atomic/time_line_edit.cpp
    src/atomic/custom_group_widget.cpp
    src/atomic/instances_counter_button.cpp
    src/atomic/minimalist_scrollbar.cpp
    src/helpers/shadow_painter.cpp
    src/style_bridge.cpp
    src/helpers/overlay_geometry.cpp
    src/helpers/editable_text.cpp
    src/helpers/wheel_scroll_policy.cpp
    src/helpers/underline_painter.cpp
    src/helpers/icon_pixmap.cpp
    src/helpers/hover_coordinator.cpp
    src/buttons/button.cpp
    src/buttons/chip_group.cpp
    src/buttons/regions.cpp
    src/buttons/specs.cpp
    src/buttons/controller.cpp
    src/buttons/painter.cpp
    src/buttons/content/content.cpp
    src/buttons/layers/ripple.cpp
    src/buttons/layers/background_layer.cpp
    src/buttons/layers/content_layer.cpp
    src/buttons/layers/badge_layer.cpp
    src/buttons/layers/underline_layer.cpp
    src/buttons/layers/strikethrough_layer.cpp
    src/buttons/layers/divider_layer.cpp
    src/buttons/layers/ripple_layer.cpp
    src/buttons/dropdown_menu.cpp
    src/buttons/capabilities/long_press_capability.cpp
    src/buttons/capabilities/menu_capability.cpp
    src/buttons/capabilities/scroll_capability.cpp
    src/buttons/variants.cpp
    src/buttons/button_group.cpp
    src/comboboxes/combo_box.cpp
    src/comboboxes/models.cpp
    src/comboboxes/search.cpp
    src/comboboxes/overlay.cpp
    src/comboboxes/dropdown_overlay.cpp
    src/comboboxes/scrollable_combo_box.cpp
    src/composite/base_flyout.cpp
    src/composite/color_swatch.cpp
    src/composite/dialog_shell.cpp
    src/composite/drag_ghost_widget.cpp
    src/composite/flyout.cpp
    src/composite/help_sections.cpp
    src/composite/log_console_widget.cpp
    src/composite/preview_panel.cpp
    src/composite/process_console_widget.cpp
    src/composite/sidebar_nav_list.cpp
    src/composite/markdown_help_dialog.cpp
    src/composite/adaptive_tab_strip.cpp
    src/composite/toolbar.cpp
    src/composite/toast.cpp
    src/composite/icon_action_flyout.cpp
    src/composite/simple_options_flyout.cpp
    src/composite/unified_flyout/model.cpp
    src/composite/unified_flyout/layout.cpp
    src/composite/unified_flyout/delegate.cpp
    src/composite/unified_flyout/overlay_list_view.cpp
    src/composite/unified_flyout/minimalist_scrollbar.cpp
    src/composite/unified_flyout/panel.cpp
    src/composite/unified_flyout/session.cpp
    src/composite/unified_flyout/refresh.cpp
    src/composite/unified_flyout/dragdrop.cpp
    src/composite/unified_flyout/content.cpp
    src/composite/unified_flyout/simple_adapter.cpp
    src/composite/unified_flyout/bootstrap.cpp
)

target_include_directories(sli_ui_toolkit_cpp
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(sli_ui_toolkit_cpp
    PUBLIC
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
)
